<resources>
    <string name="app_name">Stellar Sounds</string>
    <!-- Strings used for fragments for navigation -->
    <string name="touchToSkip">touch to skip</string>
    <string name="selectLevel">select level</string>
    <string name="highscores" translatable="false">highscores</string>
    <string name="level" translatable="false">level</string>
    <string name="watchIntro">watch intro video</string>
    <string name="clearScores">clear</string>
    <string name="win">win!</string>
    <string name="gameOver">game over!</string>
    <string name="pointsCollected">%1$d points collected</string>
    <string name="tryAgain">try again</string>
    <string name="returnB">return</string>
    <string name="play">play</string>
    <string name="language">language</string>
    <string name="showfps">display FPS\:</string>
    <string name="settings">settings</string>
    <string name="newhighscore">new \n highscore!</string>
    <string name="lives">LIVES</string>
    <string name="points">POINTS</string>
    <string name="on">on</string>
    <string name="off">off</string>
</resources>